Homework1/network.tf
# SECURITY GROUP #
# Nginx security group 
resource "aws_security_group" "nginx-sg" {
  name = "homework1-nginx_sg"

  # HTTP access from vpc 
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["172.31.90.216/32"]
  }

  # outbound allow all
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name  = "Nginx security group"
    Owner = "Etai Tavor"
  }
}
